--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   flutter_stripe: ^11.4.0
   image_picker: ^1.1.2
   firebase_storage: ^12.4.4
+  http: ^1.3.0
+  random_string: ^2.3.1
+  shared_preferences: ^2.5.2
 
 dev_dependencies:
   flutter_test:
