--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,6 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  firebase_core: ^3.12.1
   firebase_auth: ^5.5.1
   cloud_firestore: ^5.6.5
   flutter_stripe: ^11.4.0
@@ -44,6 +43,7 @@ dependencies:
   http: ^1.3.0
   random_string: ^2.3.1
   shared_preferences: ^2.5.2
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
